syntax = "proto3";

package google.example.myproto.v1;

service Gopher {
  rpc SimpleMethod(SimpleRequest) returns (SimpleResponse);
}

message SimpleRequest {
  int32 field = 1;

  enum Alignment {
    GOOD = 0;
    EVIL = 1;
  }
  Alignment alignment = 2;
}

message SimpleResponse {
  string value = 1;
}
